--- a/src/app/Utilities_Pages/Caging/caging-new/caging-new.component.scss
+++ b/src/app/Utilities_Pages/Caging/caging-new/caging-new.component.scss
@@ -14,6 +14,11 @@ ul{
     width: 96%;
     margin: 0 auto;
 }
+a{
+    text-decoration: none;
+    cursor: pointer;
+    color: inherit;
+}
 
 .objectColumn{
     border-left: 4px solid $color-blue-default;
@@ -25,6 +30,16 @@ ul{
     button{
         float:right;
     }
+}
+
+.loading{
+    opacity: 0.4;
+    pointer-events:none;
+}
+
+.loaded{
+    opacity: 1.0;
+    pointer-events: all;
 }
 
 //Shifts the $ sign in the input boxes up to line up with the input text
