--- a/src/app/Utilities_Pages/pdf-upload/pdf-upload.component.html
+++ b/src/app/Utilities_Pages/pdf-upload/pdf-upload.component.html
@@ -45,6 +45,7 @@
             [(ngModel)]="startDate" placeholder="start date">
           <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #startDatePicker></mat-datepicker>
+          <mat-hint>Start Date</mat-hint>
         </mat-form-field>
       </div>
       <div class="col-md-3">
@@ -53,6 +54,7 @@
             placeholder="end date">
           <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #endDatePicker></mat-datepicker>
+          <mat-hint>End Date</mat-hint>
         </mat-form-field>
       </div>
     </div>
