--- a/src/app/Utilities_Pages/whitemail/whitemail-new/whitemail-new.component.html
+++ b/src/app/Utilities_Pages/whitemail/whitemail-new/whitemail-new.component.html
@@ -6,7 +6,7 @@
     <h4>Create Whitemail</h4>
     <br>
     <ul>
-      <li *ngFor="let element of whitemailArr">
+      <li *ngFor="let element of whitemailArr; let i = index" [attr.data-index]="i">
         <div class="row">
           <div class="col-lg-11 objectColumn">
             <div class="row">
@@ -23,6 +23,9 @@
                   <mat-icon matSuffix class="dropdownIcon">arrow_drop_down</mat-icon>
                 </mat-form-field>
               </div>
+              <div class="col-lg-2" *ngIf="i == 0 && element.Client != null && whitemailArr.length > 1">
+                  <button mat-button (click)="applyClientToAllRows(element.Client)" title="Apply client selection across all entries">Apply to all <i class="material-icons">ballot</i></button>
+                </div>
             </div>
             <div class="row">
               <div class="col-lg-4">
@@ -100,7 +103,7 @@
           </div>
           <div class="col-lg-1 buttonColumn">
             <div class="row">
-              <div class="col-lg-12">
+              <div class="col-lg-12" *ngIf="whitemailArr.length > 1">
                 <button mat-icon-button matTooltip="Delete row" [matTooltipShowDelay]="1000" [matTooltipHideDelay]="200"><i
                     class="material-icons" (click)="deleteRow(element)">delete</i></button>
               </div>
