--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="this.pageReady == false" class="loading-indicator">
     <mat-progress-spinner mode="indeterminate" color="accent"></mat-progress-spinner>
 </div>
+
 <div *ngIf="(this.pageReady == true) && (this.rootReturns)">
     <app-toolbar></app-toolbar>
     <table id="table1" mat-table [dataSource]="this.rootReturns" multiTemplateDataRows matSort (matSortChange)="SortFunction($event, this.rootReturns)">
@@ -10,9 +11,6 @@
                 <button mat-icon-button (click)="ToggleExpansion(client)" class="returnsExpCollBtn">
                     <i class="material-icons md-elevation-z6" [ngClass]="CollapseListBtn(client)?'mi_arrow_drop_down':'mi_arrow_right'"></i>
                 </button>
-                <!-- <button mat-icon-button (click)="NextLevel(client, client.MailTypeList)" class="returnsExpCollBtn testButton">
-                        <i class="material-icons" [ngClass]="ReadyToCollapseAll(client.MailTypeList)?'custom_line_weight_icon':'mi_drag_handle'"></i>
-                    </button> -->
             </td>
             <td mat-footer-cell *matFooterCellDef class="expandBtnColumn"> </td>.
         </ng-container>
@@ -33,12 +31,6 @@
                         'font-sm': GetVisibilityStyle(! client.Measure.Expanded) == 'visible'
                     }"
                     (click)="NextLevel(client, client.MailTypeList)">{{client.ClientName }}</span>
-                <!-- <button mat-button class="allCollapseHeader"
-                        [ngClass]="{
-                            'font-client-lg': GetVisibilityStyle(! client.Measure.Expanded) == 'collapse',
-                            'font-sm': GetVisibilityStyle(! client.Measure.Expanded) == 'visible'
-                        }"  (click)="NextLevel(client, client.MailTypeList)">{{client.ClientName }}
-                    </button> -->
             </td>
             <td mat-footer-cell *matFooterCellDef class="mailLevelColumn"> Total Clients </td>
         </ng-container>
@@ -137,7 +129,7 @@
                 NLM</th>
             <td mat-cell *matCellDef="let client">
                 <span [ngClass]="{'negative':client.Measure.NLM < 0}" *ngIf="!client.Measure.Expanded">{{client.Measure.NLM|currency}}</span></td>
-           <td mat-footer-cell *matFooterCellDef><span [ngClass]="{'negative':this.rootReturns[0].Measure.NLM < 0}">{{
+            <td mat-footer-cell *matFooterCellDef><span [ngClass]="{'negative':this.rootReturns[0].Measure.NLM < 0}">{{
                     this.grandTotal.NLM|currency}}</span></td>
         </ng-container>
         <ng-container matColumnDef="CPD">
@@ -172,9 +164,6 @@
                 <button mat-icon-button (click)="ToggleExpansion(mailType)" class="returnsExpCollBtn">
                     <i class="material-icons" [ngClass]="CollapseListBtn(mailType)?'mi_arrow_drop_down':'mi_arrow_right'"></i>
                 </button>
-                <!-- <button mat-icon-button (click)="NextLevel(mailType, mailType.CampaignList)" class="returnsExpCollBtn">
-                        <i class="material-icons" [ngClass]="ReadyToCollapseAll(mailType.CampaignList)?'custom_line_weight_icon':'mi_drag_handle'"></i>
-                    </button> -->
             </td>
             <td mat-footer-cell *matFooterCellDef class="expandBtnColumn"> </td>
         </ng-container>
@@ -189,16 +178,11 @@
         <ng-container matColumnDef="MailType">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="mailLevelColumn" [ngClass]="client.MailTypeList[0].Measure.Expanded?'headerCollapsed':'headerExpanded'">
                 Mail Type </th>
-            <!-- <td mat-cell *matCellDef="let mailType" class="mailLevelColumn"> {{mailType.MailType}} </td> -->
             <td mat-cell *matCellDef="let mailType" class="mailLevelColumn">
                 <span class="allCollapseHeader" (click)="NextLevel(mailType, mailType.CampaignList)" [ngClass]="{
                         'font-mailType-lg': GetVisibilityStyle(! mailType.Measure.Expanded) == 'collapse',
                         'font-sm': GetVisibilityStyle(! mailType.Measure.Expanded) == 'visible'
                             }">{{mailType.MailType}}</span>
-                <!-- <button mat-button class="allCollapseHeader" (click)="NextLevel(mailType, mailType.CampaignList)" [ngClass]="{
-                                'font-mailType-lg': GetVisibilityStyle(! mailType.Measure.Expanded) == 'collapse',
-                                'font-sm': GetVisibilityStyle(! mailType.Measure.Expanded) == 'visible'
-                                    }">{{mailType.MailType}}</button> -->
             </td>
             <td mat-footer-cell *matFooterCellDef class="mailLevelColumn" [ngClass]="{
                     'elementCollapsed': ReadyToCollapseAll(client.MailTypeList) == false,
@@ -429,9 +413,6 @@
                 <button mat-icon-button (click)="ToggleExpansion(campaign)" class="returnsExpCollBtn">
                     <i class="material-icons" [ngClass]="CollapseListBtn(campaign)?'mi_arrow_drop_down':'mi_arrow_right'"></i>
                 </button>
-                <!-- <button mat-icon-button (click)="NextLevel(element, element.PhaseList)" class="returnsExpCollBtn">
-                        <i class="material-icons" [ngClass]="ReadyToCollapseAll(element.PhaseList)?'custom_line_weight_icon':'mi_drag_handle'"></i>
-                    </button> -->
             </td>
             <td mat-footer-cell *matFooterCellDef class="expandBtnColumn"> </td>
         </ng-container>
@@ -447,16 +428,11 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="mailLevelColumn" [ngClass]="mailType.CampaignList[0].Measure.Expanded?'headerCollapsed':'headerExpanded'">
                 Campaign
             </th>
-            <!-- <td mat-cell *matCellDef="let campaign" class="mailLevelColumn"> {{element.CampaignName}} </td> -->
             <td mat-cell *matCellDef="let campaign" class="mailLevelColumn">
                 <span class="allCollapseHeader" (click)="NextLevel(campaign, campaign.PhaseList)" [ngClass]="{
                         'font-campaignName-lg': GetVisibilityStyle(! campaign.Measure.Expanded) == 'collapse',
                         'font-sm': GetVisibilityStyle(! campaign.Measure.Expanded) == 'visible'
                         }">{{campaign.CampaignName}}</span>
-                <!-- <button mat-button class="allCollapseHeader" (click)="NextLevel(element, element.PhaseList)" [ngClass]="{
-                            'font-campaignName-lg': GetVisibilityStyle(! element.Measure.Expanded) == 'collapse',
-                            'font-sm': GetVisibilityStyle(! element.Measure.Expanded) == 'visible'
-                            }">{{element.CampaignName}}</button> -->
             </td>
             <td mat-footer-cell *matFooterCellDef class="mailLevelColumn" [ngClass]="{
                         'elementCollapsed': ReadyToCollapseAll(mailType.CampaignList) == false,
@@ -693,7 +669,7 @@
             <th mat-header-cell *matHeaderCellDef [ngClass]="selectionMode? 'sbcShifted':'sbc'"></th>
             <td mat-cell *matCellDef="let phase" [ngClass]="selectionMode? 'sbcShifted':'sbc'">
                 <mat-checkbox class="md-checkbox" *ngIf="selectionMode == true" [(ngModel)]="phase.Measure.Selected"
-                   [(indeterminate)]="phase.Measure.Indeterminate" (change)="ToogleChecks(phase)"></mat-checkbox>
+                    [(indeterminate)]="phase.Measure.Indeterminate" (change)="ToogleChecks(phase)"></mat-checkbox>
             </td>
             <td mat-footer-cell *matFooterCellDef [ngClass]="selectionMode? 'sbcShifted':'sbc'"></td>
         </ng-container>
@@ -701,7 +677,6 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="mailLevelColumn" [ngClass]="campaign.PhaseList[0].Measure.Expanded?'headerCollapsed':'headerExpanded'">
                 Phase
             </th>
-            <!-- <td mat-cell *matCellDef="let phase" class="mailLevelColumn"> {{element.PhaseName}}</td> -->
             <td mat-cell *matCellDef="let phase" class="mailLevelColumn">
                 <span [ngClass]="{
                         'font-phase-lg': GetVisibilityStyle(! phase.Measure.Expanded) == 'collapse',
@@ -801,7 +776,7 @@
                 New
             </th>
             <td mat-cell *matCellDef="let phase"><span *ngIf="!phase.Measure.Expanded">{{phase.Measure.NewDonors|number}}</span></td>
-           <td mat-footer-cell *matFooterCellDef [ngClass]="{
+            <td mat-footer-cell *matFooterCellDef [ngClass]="{
                                      'elementCollapsed': ReadyToCollapseAll(campaign.PhaseList) == false,
                                      'elementExpanded':ReadyToCollapseAll(campaign.PhaseList) == true,
                                      'elementLast': campaign.Measure.IsLast == true,
@@ -957,7 +932,9 @@
                         <div class="row phaseInfoHeader">
                             <div class="col-lg-8"></div>
                             <div class="col-lg-2">
-                                <a [ngStyle]="{'visibility':phase.PDFExists?'visible':'collapse'}" class="aPackagePDF" href="https://sd360.sunrisedataservices.com/api/LoadPDF?PhaseID={{phase.ID}}" target="_blank">Package PDF</a>
+                                <a [ngStyle]="{'visibility':phase.PDFExists?'visible':'collapse'}" class="aPackagePDF"
+                                    href="https://sd360.sunrisedataservices.com/api/LoadPDF?PhaseID={{phase.ID}}"
+                                    target="_blank">Package PDF</a>
                             </div>
                             <div class="col-lg-2">
                                 <span class="sPackageDoubling">Doubling Days ({{phase.DoublingDays}})</span>
@@ -1206,11 +1183,6 @@
                          }">
                 {{phase.Measure.IO|number:'1.2-2'}} </td>
         </ng-container>
-
-
-
-
-
         <tr mat-header-row *matHeaderRowDef="mailListDisplayedColumns" [ngClass]="{
                 'selectionBoxUnchecked': phase.Measure.Selected == false
             }"></tr>
@@ -1248,7 +1220,7 @@
 </ng-container>
 
 <tr mat-header-row [ngStyle]="{'visibility':mailType.CampaignList[0].Measure.Expanded?'collapse':'visible' }"
-   *matHeaderRowDef="campaignDisplayedColumns" [ngClass]="{
+    *matHeaderRowDef="campaignDisplayedColumns" [ngClass]="{
             'selectionBoxUnchecked': mailType.Measure.Selected == false
         }"></tr>
 <tr mat-row *matRowDef="let campaign; columns: campaignDisplayedColumns;" class="example-element-row" [ngClass]="{
@@ -1328,7 +1300,6 @@
             <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #endDatePicker></mat-datepicker>
         </mat-form-field>
-        <!-- Client - CL -->
         <mat-form-field class="tbElement">
             <mat-chip-list #CLchipList>
                 <mat-chip *ngFor="let client of CLList" [selectable]="selectable" [removable]="removable" (removed)="CL_Remove(client)">
@@ -1344,53 +1315,6 @@
             </mat-autocomplete>
         </mat-form-field>
 
-        <!-- Mail Type - MT -->
-        <!-- <mat-form-field class="tbElement">
-            <mat-chip-list #MTchipList>
-                <mat-chip *ngFor="let mailtype of MTList" [selectable]="selectable" [removable]="removable" (removed)="MT_Remove(mailtype)">
-                    {{mailtype}}
-                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                </mat-chip>
-                <input placeholder="Mail Type..." #MTInput [formControl]="MTControl" [matAutocomplete]="MTauto"
-                    [matChipInputFor]="MTchipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                    [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="MT_Add($event)">
-            </mat-chip-list>
-            <mat-autocomplete #MTauto="matAutocomplete" (optionSelected)="MT_Selected($event)">
-                <mat-option class="md-custom-option" *ngFor="let mailtype of MTfilteredOptions | async" [value]="mailtype">{{mailtype}}</mat-option>
-            </mat-autocomplete>
-        </mat-form-field> -->
-
-        <!-- Campaign - CA -->
-        <!-- <mat-form-field class="tbElement">
-            <mat-chip-list #CAchipList>
-                <mat-chip *ngFor="let campaign of CAList" [selectable]="selectable" [removable]="removable" (removed)="CA_Remove(campaign)">
-                    {{campaign}}
-                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                </mat-chip>
-                <input placeholder="Campaign..." #CAInput [formControl]="CAControl" [matAutocomplete]="CAauto"
-                    [matChipInputFor]="CAchipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                    [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="CA_Add($event)">
-            </mat-chip-list>
-            <mat-autocomplete #CAauto="matAutocomplete" (optionSelected)="CA_Selected($event)">
-                <mat-option class="md-custom-option" *ngFor="let campaign of CAfilteredOptions | async" [value]="campaign">{{campaign}}</mat-option>
-            </mat-autocomplete>
-        </mat-form-field> -->
-
-        <!-- Phase - PH -->
-        <!-- <mat-form-field class="tbElement">
-            <mat-chip-list #PHchipList>
-                <mat-chip *ngFor="let phase of PHList" [selectable]="selectable" [removable]="removable" (removed)="PH_Remove(phase)">
-                    {{phase}}
-                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                </mat-chip>
-                <input placeholder="Phase..." #PHInput [formControl]="PHControl" [matAutocomplete]="PHauto"
-                    [matChipInputFor]="PHchipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                    [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="PH_Add($event)">
-            </mat-chip-list>
-            <mat-autocomplete #PHauto="matAutocomplete" (optionSelected)="PH_Selected($event)">
-                <mat-option class="md-custom-option" *ngFor="let phase of PHfilteredOptions | async" [value]="phase">{{phase}}</mat-option>
-            </mat-autocomplete>
-        </mat-form-field> -->
 
 
         <br>
@@ -1402,22 +1326,11 @@
         <hr>
         <br>
         <div>
-            <!-- (change)="testChange($event, clientTable)" -->
             <mat-slide-toggle [(ngModel)]="selectionMode">
                 Omit Data
             </mat-slide-toggle>
             <!-- Scroll-fix (when height of screen is smaller) -->
             <div style="height: 150px; width:100%;"></div>
-            <!-- <table *ngIf="selectionMode == true">
-                        <tr>
-                            <td>
-                                <button mat-raised-button color="accent" (click)="applySelection()"> Show Selected</button>
-                            </td>
-                            <td>
-                                <button mat-raised-button color="accent" (click)="clearSelection()"> Show All</button>
-                            </td>
-                        </tr>
-                    </table> -->
         </div>
     </div>
 </div>
@@ -1445,7 +1358,7 @@
             chicken
             hamburger, tenderloin turkey rump ball tip sirloin frankfurter meatloaf boudin brisket ham hock. Hamburger
             venison
-           brisket tri-tip andouille pork belly ball tip short ribs biltong meatball chuck. Pork chop ribeye tail
+            brisket tri-tip andouille pork belly ball tip short ribs biltong meatball chuck. Pork chop ribeye tail
             short
             ribs, beef hamburger meatball kielbasa rump corned beef porchetta landjaeger flank. Doner rump frankfurter
             meatball
@@ -1462,5 +1375,3 @@
         </p>
     </div>
 </div>
-
-<!-- </div> -->
